# haskellbook

chapter1/: CHANGELOG.md  chapter1.cabal
chapter1/app/: Main.hs
chapter2/: chapter2.cabal
chapter2/app/: Main.hs
chapter3/tests/: test.hs
chapter4/tests/: test.hs
chapter5/: CHANGELOG.md  mono.cabal
chapter5/tests/: test.hs
tasty_example/: mono.cabal
